# BxLog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: bxlog.hpp
include/bxlog/: log.hpp  log_info.hpp  log_level.hpp  log_linter.hpp  log_wrapper.hpp  logger.hpp
src/: log.cpp  log_linter.cpp
